--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,33 +1,53 @@
-.container {
-    width: 400px;
-    height: 1000px;
-    margin: 50px auto 0;
+* {
+    box-sizing: border-box;
 }
-
 
 header {
-    height: 30px;
-    width: 0 auto;
+    height: 100% auto;
+    width: 100% auto;
 }
 
-
-
 h1 {
+    height: 70px;
     background-color: rgba(34, 49, 52, 0.9);
     color: white;
     text-align: center;
+    padding-top: 10px;
+}
+
+.container {
+    width: 100%;
+    margin: 50px auto 0;
+    float: center;
 }
 
 
 .add-style {
     margin-left: 10px;
-    padding: 5px 10px;
+    padding: 5px 15px;
     border: none;
     background-color: #00FF00;
     box-shadow: 0 5px #008800;
 }
 
 .add-style:active {
+    box-shadow: none;
+    position: relative;
+    top: 5px;
+}
+
+/* .d-btn { */
+    /* float: right; */
+    /* color: #fff; */
+    /* background-color: #0099FF; */
+    /* box-shadow: 0 5px #006699; */
+    /* padding: 8px 8px; */
+    /* border: none; */
+    /* font-weight: bold;  */
+    /* border-radius: 100vh; */
+/* } */
+
+.d-btn:active {
     box-shadow: none;
     position: relative;
     top: 5px;
@@ -47,21 +67,20 @@ input {
 }
 
 .text-box {
-    margin-top: 50px;
-    margin-left: 30px;
+    float: left;
 }
 
 
 
 .todos {
     width: 100%;
-    margin-left: 35px;
+    margin: 0;
     padding: 0;
 
 }
 
 .list-item {
-    list-style-type: square;
+    list-style: none;
     font-size: 25px;
 
 }
@@ -93,4 +112,15 @@ input {
 .endbutton-style:hover {
     color: #FF82B2;
 }
+
+@media(max-width: 670px) {
+    header {
+        width: 100%;
+    }
+    .container {
+        width: 100%;
+    }
+
+}
+
 
